apps/argocd/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-http
  namespace: default
spec:
  parentRefs:
  - name: gateway
    namespace: istio-system
  hostnames: ["argocd.dev55.ha-cloud.keba.com"]
  rules:
  - matches:
    backendRefs:
    - name: argocd-server
      port: 443
